--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -5,7 +5,25 @@
     <title>List of Vets</title>
 </head>
 <body>
-    <h1 th:text="'List of Vets'">List of Vets...</h1>
+<!--/*thymesVar id="vet" type="woita.sfgpetclinic.model.Vet"*/-->
+<h1 th:text="'List of Vets'">Vets List</h1>
+
+<table >
+    <thead>
+    <tr>
+        <th>Id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="vet : ${vets}">
+        <td th:text="${vet?.id}">1</td>
+        <td th:text="${vet?.firstName}">Sue</td>
+        <td th:text="${vet?.lastName}">Bailey</td>
+    </tr>
+    </tbody>
+</table>
 
 </body>
 </html>
