moving from junit 4 to junit 5 closes #4

--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -5,7 +5,7 @@
     <title>List of Vets</title>
 </head>
 <body>
-<!--/*thymesVar id="vet" type="woita.sfgpetclinic.model.Vet"*/-->
+<!--/*thymesVar id="vet" type="woita.com.woita.sfgpetclinic.model.Vet"*/-->
 <h2 th:text="'List of Vets'">Vets List</h2>
 
 <table  id="vets" class="table table-striped">
