--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -5,7 +5,7 @@
     <title>List of Pet Owners</title>
 </head>
 <body>
-    <!--/*thymesVar id="owner" type="woita.sfgpetclinic.model.Owner"*/-->
+    <!--/*thymesVar id="owner" type="woita.com.woita.sfgpetclinic.model.Owner"*/-->
     <h2 th:text="'List of Owners'">Owners List</h2>
 
     <table id ="owners" class="table table-striped">
